--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack serve",
+    "deploy": "npm run build && gh-pages -d dist",
+    "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production npx webpack --mode production"
   },
   "repository": {
@@ -19,13 +22,14 @@
   "homepage": "https://github.com/EgorEf/test_html_project#readme",
   "devDependencies": {
     "css-loader": "^6.3.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.55.0",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.0"
   }
 }
