--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx webpack serve",
-    "deploy": "npm run build && gh-pages -d dist",
+    "deploy:github": "npm run build && node ./scripts/deploy-github",
     "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production npx webpack --mode production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EgorEf/test_html_project.git"
+    "url": "git+https://github.com/EgorEf/EgorEf.github.io.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/EgorEf/test_html_project/issues"
+    "url": "https://github.com/EgorEf/EgorEf.github.io/issues"
   },
-  "homepage": "https://github.com/EgorEf/test_html_project#readme",
+  "homepage": "https://github.com/EgorEf/EgorEf.github.io#readme",
   "devDependencies": {
     "css-loader": "^6.3.0",
     "gh-pages": "^3.2.3",
